--- a/templates/about.html
+++ b/templates/about.html
@@ -50,7 +50,8 @@
         <div class="row align-items-center">
           <div class="col-lg-10 d-none d-lg-block"> 
             <a href="#" class="small mr-3"><span class="icon-phone2 mr-2"></span> +91 7654321890</a> 
-            <a href="#" class="small mr-3"><span class="icon-envelope-o mr-2"></span>academics123@gmail.com</a> 
+            <a href="#" class="small mr-3"><span class="icon-envelope-o mr-2"></span>academics123@gmail.com</a>
+            <a href="https://www.instagram.com/" >instagram</a> 
           </div>
           <div class="col-lg-12 text-right">
             <a href="/logins" class="small mr-3"><span class="icon-unlock-alt"></span>Student Login</a>
