--- a/templates/upload.html
+++ b/templates/upload.html
@@ -84,47 +84,51 @@
                         <li class="breadcrumb-item active">Result Upload</li>
                     </ol>
 
+                        <div class="dotted">
+                            <p class="para"> Upload and attach files</p>
+                            <div class="box-out">
+                                <div class="upl">
+                                    <img class=uplimg src="static\images\upl.png" alt="upload">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlSelect1">Name of the batch</label>
+                                    <select class="form-control" id="exampleFormControlSelect1" name="platform" required="required">
+                                        <option>6</option>
+                                        <option>7</option>
+                                        <option>8</option>
+                                        <option>9</option>
+                                    </select>
+                                </div>
+                                
 
-                    <p class=""> Upload and attach files</p>
-
-                    <div class="box-out">
-                        
-                        <img class=upl src="static\images\upl.png" alt="upload">
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Name of the batch</label>
-                            <select class="form-control" id="exampleFormControlSelect1" name="platform" required="required">
-                                <option>6</option>
-                                <option>7</option>
-                                <option>8</option>
-                                <option>9</option>
-                            </select>
-                        </div>
-                        <!-- <div class="dropdown">
+                                
+                                <!-- <div class="dropdown">
                                                         <label for="options" class="dropdown-label">Select an Option</label>
                                                         <div class="dropdown-content">
-                                                          <select id="options">
-                                                            <option value="option1">Option 1</option>
-                                                            <option value="option2">Option 2</option>
-                                                            <option value="option3">Option 3</option>
-                                                          </select>
+                                                            <select id="options">
+                                                                <option value="option1">Option 1</option>
+                                                                <option value="option2">Option 2</option>
+                                                                <option value="option3">Option 3</option>
+                                                            </select>
                                                         </div>
-                                                      </div>          -->
+                                                        </div>         -->
                         
-                        <p>Click on the "Choose File" button to upload a file:</p>
-                        <form>
-                            <input type="file" id="myFile" name="filename">
+                                <p>Click on the "Choose File" button to upload a file:</p>
+                                <form>
+                                    <input type="file" id="myFile" name="filename">
                         
-                            <input type="submit">
-                        </form>
+                                    <input type="submit">
+                                </form>
+                            </div>
+                        </div>
+                        
+                        
+                        
+                        
+                        
+                    
+                    
                     </div>
-
-
-
-
-
-
-
-                </div>
             </main>
 
 
