--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -592,6 +592,7 @@ progress {
   margin-bottom: 1rem;
   font-size: 0.875em;
   color: #6c757d;
+  background-color: #183661;
 }
 .blockquote-footer::before {
   content: "— ";
@@ -3752,7 +3753,7 @@ textarea.form-control-lg {
   --bs-navbar-brand-padding-y: 0.3125rem;
   --bs-navbar-brand-margin-end: 1rem;
   --bs-navbar-brand-font-size: 1.25rem;
-  --bs-navbar-brand-color: rgba(0, 0, 0, 0.9);
+  --bs-navbar-brand-color: rgba(255, 255, 255, 0.9);
   --bs-navbar-brand-hover-color: rgba(0, 0, 0, 0.9);
   --bs-navbar-nav-link-padding-x: 0.5rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
@@ -6808,6 +6809,8 @@ textarea.form-control-lg {
   right: 0;
   left: 0;
   z-index: 1030;
+  background-color: #183661;
+  color:#e7f1ff
 }
 
 .fixed-bottom {
@@ -8180,7 +8183,7 @@ textarea.form-control-lg {
 
 .bg-dark {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity));
 }
 
 .bg-black {
@@ -10919,6 +10922,8 @@ body {
 }
 .sb-nav-fixed .sb-topnav {
   z-index: 1039;
+  background-color: #183661;
+  color:#e7f1ff
 }
 .sb-nav-fixed #layoutSidenav #layoutSidenav_nav {
   width: 225px;
@@ -10962,7 +10967,8 @@ body {
   padding-left: 0;
   height: 56px;
   z-index: 1039;
-  background-color:#0b5ed7;
+  background-color: #183661;
+  color:#e7f1ff
 }
 .sb-topnav .navbar-brand {
   width: 225px;
@@ -10973,7 +10979,7 @@ body {
   
 }
 .sb-topnav.navbar-light #sidebarToggle {
-  color:#5A5A5A;
+  color:#183661;
 }
 
 .sb-sidenav {
@@ -11020,6 +11026,7 @@ body {
 .sb-sidenav .sb-sidenav-footer {
   padding: 0.75rem;
   flex-shrink: 0;
+  
 }
 
 .sb-sidenav-dark {
@@ -11049,6 +11056,8 @@ body {
 }
 .sb-sidenav-dark .sb-sidenav-footer {
   background-color: #343a40;
+  
+  
 }
 
 .sb-sidenav-light {
@@ -11486,15 +11495,34 @@ body {
   text-align: center;
 }
 
-.upl
-{
-  align-content: center;
-  align-items: center;
-  justify-content: center;
+
+.upl {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+  margin: 0;
+  padding: 0;
 }
 
+.uplimg {
+  display: block;
+  margin: 0 ;
+  height: 50%;
+  width:30%;
+  
+}
+.para
+{
+  justify-content: center;
+  text-align: center;
+}
 
+.dotted{
+  border: 2px dotted #333333;
+  padding: 20px;
+  border-radius: 8px;
+}
 /* sem
 body {
   font-family: Arial, sans-serif;
@@ -11535,3 +11563,13 @@ body {
 .dropdown:hover .dropdown-content {
   display: block;
 } */
+
+
+
+
+
+
+
+
+
+
