--- a/templates/dash.html
+++ b/templates/dash.html
@@ -15,7 +15,7 @@
 
 
 <body class="sb-nav-fixed">
-  <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+  <nav class="sb-topnav navbar navbar-expand  ">
     <!-- Navbar Brand-->
     <a class="navbar-brand ps-3" href="/dash">Teacher Dashboard</a>
     <!-- Sidebar Toggle-->
